--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
     
       <div>
         <%= f.label :date_of_birth %><br />
-        <%= f.date_select :date_of_birth %>
+        <%= f.date_select :date_of_birth, :start_year => 1800%>
       </div>
     
       <div class="field">
