--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,7 +43,7 @@
                 <% end %>
                 
                 <li class='icon'>
-                    <a href='javascript:void(0)' onclick="responsive_nav()">&#9776</a>
+                    <a href='javascript:void(0)' onclick="responsive_nav()"><!--&#9776--><div class='nav-hamburger-container'><div class='nav-hamburger'></div><div class='nav-hamburger'></div><div class='nav-hamburger'></div></div></a>
                 </li>
             </ul>
             <% if user_signed_in? %>
