--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -9,4 +9,9 @@
     "<%= @arrive_city_ita %>"<br>
     "<%= @depart_city_ita %>"<br>
     "<%= @search %>"<br>
+     DB db<%= @database %><br>
+    DB username<%= @username %><br>
+    DB password<%= @password%>
+    
+    
 </div>
