--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -53,6 +53,17 @@ nav.header-nav {
     margin:0 auto;
 }
 
+nav.header-nav div.nav-hamburger {
+    width: 18px;
+    height: 2px;
+    background-color: white;
+    margin: 3px 0;
+}
+
+nav.header-nav div.nav-hamburger-container {
+    display:inline-block;
+    height:12px;
+}
 div.top-nav {
     float:left;
     width:100%;
@@ -80,7 +91,7 @@ ul.top-nav li a {
     font-family:$font_main;
     font-size: 12px;
     color: $top-nav_font_color;
-    padding:10px 16px;
+    padding:8px 16px 11px 16px;
     background-color: $primary_color;
     transition:0.3s;
     border:none;
@@ -112,6 +123,14 @@ nav.header-nav div.avatar-icon img{
 nav.header-nav form.search input, nav.header-nav form.search button{
     padding:6px;
     font-size:14px;
+}
+
+.clearfix:after {
+       content: "."; 
+       visibility: hidden;
+       display: block;
+       height: 0;
+       clear: both;
 }
 
 /* Small Devices, Tablets */
@@ -197,14 +216,12 @@ nav.header-nav form.search input, nav.header-nav form.search button{
         }
     }
     
-
+    /* Small Devices, Tablets */
+   @media only screen and (max-width : 768px) {
+    
+       
+    }
   
     
-    .clearfix:after {
-       content: "."; 
-       visibility: hidden;
-       display: block;
-       height: 0;
-       clear: both;
-    }
+    
 
