--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -222,6 +222,59 @@ nav.header-nav form.search input, nav.header-nav form.search button{
        
     }
   
+//Stying for datepicker (<input type='date'>)
+
+input[type="date" i] {
+    position:relative;
+}
+::-webkit-datetime-edit { position:relative; }
+::-webkit-datetime-edit-fields-wrapper { }
+::-webkit-datetime-edit-text {  }
+::-webkit-datetime-edit-month-field {  }
+::-webkit-datetime-edit-day-field {  }
+::-webkit-datetime-edit-year-field {  }
+::-webkit-inner-spin-button { display:none; }
+::-webkit-calendar-picker-indicator { 
+    width:70%;
+    height:100%;
+    opacity:0;
+    position:absolute;
+    top:0px;
+    left:0px;
+    z-index:2;
+}
+
+//Style for Jquery autocomplete
+ul .ui-menu-item:hover {
+    color:black;
+}
+.ui-menu {
+    color:grey;
+    display:inline-block;
+    list-style-type:none;
+    padding: 10px;
+    margin: 0;
+    display:block;
+    overflow:hidden;
+    background-color:white;
+    border: groove 2px #FCFCFC;
+}
+.ui-menu-item {
+    height:40px;
+    padding:0px 3px 0px 40px;
+    background-image: url('airplane_icon.gif');
+    background-size:12px;
+    background-repeat: no-repeat;
+    background-position:10px 10px;
+}
+
+div.ui-helper-hidden-accessible {
+    display:none;
+    height:0px;
+}
+
+.ui-menu-item {
     
+}
     
 
