--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -136,7 +136,7 @@
         font-family:serif
     }
     
-    .query, .query2 {
+    .query {
         width:100%;
         max-width:430px;
         background-color:transparent;
