--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -245,6 +245,8 @@ input[type="date" i] {
 }
 
 //Style for Jquery autocomplete
+
+/*
 ul .ui-menu-item:hover {
     color:black;
 }
@@ -276,5 +278,24 @@ div.ui-helper-hidden-accessible {
 .ui-menu-item {
     
 }
-    
 
+*/
+
+/* Extra Small Devices, Phones */
+    @media only screen and (max-width : 480px) {
+        
+        div.container{
+            min-width:250px;
+            width:100%;
+            margin:0 auto;
+            clear:both;
+            background-color:#FFFFFF;
+        }
+
+        div.container-no-bg {
+            min-width:250px;
+            width:100%;
+            margin:0 auto;
+            clear:both;
+        }
+    }
