--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,35 +27,41 @@
                         </div>
                         <div class='form-col-6'>
                             <%= label_tag 'coming_from', 'Coming From' %>
-                            <%= text_field_tag 'city', nil, placeholder: 'city or airport', class: "query", name:"querys[query1[query1_1]]", id: 'query1' %>
+                            <%= text_field_tag 'city', nil, placeholder: 'city or airport', class: "query", name:"query[query1[query_1_1]]", id: 'query1' %>
                         </div>
 
                         <div class='form-col-6'>
                             <%= label_tag 'going_to', 'Going To' %>
-                            <%= text_field_tag 'city', nil, placeholder: 'city or airport', class: "query", name:"querys[query1[query1_2]]", id: 'query2' %>
+                            <%= text_field_tag 'city', nil, placeholder: 'city or airport', class: "query", name:"query[query1[query_1_2]]", id: 'query2' %>
                         </div>
 
                         <div class='form-col-3'>
                             <%= label_tag 'leaving', 'Leaving' %>
-                            <%= date_field_tag(:datetime_leave, Date.today) %>
+                            <%= date_field_tag(:query_1_date_l, Date.today) %>
                         </div>
                         
-                        <div class='form-col-3'>
+                        <div class='form-col-3 on' id='returning'>
                             <%= label_tag 'returing', 'Returning' %>
-                            <%= date_field_tag(:datetime_return, Date.today) %>
+                            <%= date_field_tag(:query_2_date_l, Date.today) %>
                         </div>
                         <div class='form-col-f'>
                         
                         </div>
-                        <div class='form-col-2'>
+                        <div class='form-col-1'>
                             <%= label_tag 'adult', 'Adult (18+)' %>             
                             <%= select_tag "adult", options_for_select([ 1, 2, 3, 4, 5, 6], "1") %>
                         </div>
                         
-                        <div class='form-col-2'>
+                        <div class='form-col-1'>
                             <%= label_tag 'child', 'Child (0-17)' %>             
                             <%= select_tag "child", options_for_select([ 0, 1, 2, 3, 4, 5, 6], "0") %>
                         </div>
+                        
+                        <div class='form-col-1'>
+                            <%= label_tag 'Pet', 'Pet' %>             
+                            <%= select_tag "pet", options_for_select([ "...", "Dogs", "Cats", "Birds"], "...") %>
+                        </div>
+                        
                         <div id='container'>
                             <div class='test'>
                             </div>
@@ -65,7 +71,8 @@
                         </div>
                         <div class='form-col-xl-full'>
                             <%= label_tag 'advanced_options', 'Advanced Search', class: 'l-small' %>
-                            <%= submit_tag 'Search', class: 'submit'%>
+                            <%= hidden_field(:type, :pass_confirm, :value => "n") %>
+                            <%= submit_tag 'Search', class: 'submit' %>
                         </div>
                     </div>
                 </form>
