update home search, make functional and readable

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -299,3 +299,12 @@ div.ui-helper-hidden-accessible {
             clear:both;
         }
     }
+div .col-1 {
+    width:100%;
+    padding:10px;
+}
+
+div.col-2 {
+    width:42%;
+    padding:10px;
+}
