update search, add starting structure

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -10,7 +10,7 @@ body {
     margin: 0px;
     padding:0px;
     font-family:$font_main;
-    background-color:#2a2a2a;
+    background-color:#FFFFFF;
 }
 
 div.container{
@@ -299,12 +299,3 @@ div.ui-helper-hidden-accessible {
             clear:both;
         }
     }
-div .col-1 {
-    width:100%;
-    padding:10px;
-}
-
-div.col-2 {
-    width:42%;
-    padding:10px;
-}
