--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,50 +1,1 @@
-<style>
-div .col-1 {
-    width:100%;
-    padding:10px;
-}
-
-div.col-2 {
-    width:42%;
-    padding:10px;
-}
-</style>
-<div class='container'>
-    welcome to your search
-    (under construction)
-    <pre>
-    <% if @response != "" %>
-    <%  @response["trips"]["tripOption"].each do |x|%>
-    <div class='col-1'>
-        £<%= x["saleTotal"][3..8]%> Price
-        <%= x["slice"][0]["duration"]%> minutes (entire trip duration)
-        <% x["slice"][0]["segment"].each do |y| %>
-        
-            <%= c = y["flight"]["carrier"] %> <%= @carrier[c] %>  [Flight Carrier]
-            <%= y["duration"]%> [Duration Of flight in minutes]
-            <%= y["cabin"]%> [Cabin]
-            
-            <%= y["leg"][0]["departureTime"][0..9]%> [Departure]
-            <%= y["leg"][0]["departureTime"][11..15]%> [Departure Time]
-            
-            <%= y["leg"][0]["arrivalTime"][0..9]%> [Arival]
-            <%= y["leg"][0]["arrivalTime"][11..15]%> [Arival Time]
-            
-            <%= d = y["leg"][0]["origin"]%> <%= @airport[d] %>[coming from]
-            <%= y["leg"][0]["originTerminal"]%> [Coming from terminal]
-            
-            <%= g = y["leg"][0]["destination"]%> <%= @airport[g] %>[going to]
-            <%= y["leg"][0]["destinationTerminal"]%> [going to terminal]
-            
-            <%= y["leg"][0]["mileage"]%> [Mileage]
-            
-            <%= y["leg"][0]["meal"]%> [Meal options]
-            <hr>
-        <% end %>
-    </div>
-    
-    <% end %>
-    <% end %> 
-    </pre>
-    
-</div>
+Testing 1 2 3
