--- a/app/assets/stylesheets/search_flights.scss
+++ b/app/assets/stylesheets/search_flights.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the search_flights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+div.paw-icon {
+    display:inline-block;
+    background-image: image-url('paw_icon.png');
+    background-position: 0px 0px;
+    background-size:35px;
+    background-repeat:no-repeat;
+    height:35px;
+    width:35px;
+}
